test/vm/errors/compiler/duplicate_module_alias.ach
// Compiler error: duplicate module alias
// Expected: error about duplicate alias `utils`

import "../../../modules/utils.ach" as utils
import "../../../modules/constants.ach" as utils
